--- a/portfolio.html
+++ b/portfolio.html
@@ -144,6 +144,20 @@
             </div>
           </div>
 
+   
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ana">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/AI projects.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <a href='https://github.com/cyberos01/project-cloudformation'><h4>Set up and monitor a WordPress instance for your organization using Cloudformation</h4></a>
+                <!--<p>App</p>-->
+                <div class="portfolio-links">
+                  <!--<a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
+                </div>
+              </div>
+            </div>
+          </div>
           
               </div>
             </div>
