--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/AI projects.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <a href='https://github.com/cyberos01/project-cloudformation'><h4>Set up and monitor a WordPress instance for your organization using Cloudformation</h4></a>
+                <a href='https://medium.com/@arunjoseph364/deploying-super-mario-game-on-aws-elastic-container-service-aws-ecs-fargate-8cd52a6e7263'><h4>Deploying Super Mario Game on AWS Elastic Container Service (AWS ECS) Fargate</h4></a>
                 <!--<p>App</p>-->
                 <div class="portfolio-links">
                   <!--<a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
