Add portfolio.io contents

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
       >
         <h1>Arun Joseph</h1>
         <h2>
-          | AWS Certified Cloud Practitioner | AWS | LINUX| DNS
-          | SSH | Networking  | MYSQL | CPANEL | Cpanel And WHM Certified |
+          | AWS Cloud Engineer | Server Admin|
         </h2>
         <a href="about.html" class="btn-about">About Me</a>
       </div>
