--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
    
           <div class="col-lg-4 col-md-6 portfolio-item filter-ana">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/AI projects.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Container deploy.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <a href='https://medium.com/@arunjoseph364/deploying-super-mario-game-on-aws-elastic-container-service-aws-ecs-fargate-8cd52a6e7263'><h4>Deploying Super Mario Game on AWS Elastic Container Service (AWS ECS) Fargate</h4></a>
                 <!--<p>App</p>-->
@@ -159,7 +159,24 @@
             </div>
           </div>
           
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ana">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/AI projects.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <a href='https://medium.com/@arunjoseph364/deploy-text-to-speech-ai-application-on-aws-3decffffd488'><h4>Deploy Text-to-Speech AI Application on AWS</h4></a>
+                <!--<p>App</p>-->
+                <div class="portfolio-links">
+                  <!--<a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>-->
+                  <!--<a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>-->
+                </div>
               </div>
+            </div>
+          </div>
+        
+
+
+            </div>
             </div>
           </div>
     </section><!-- End Portfolio Section -->
