--- a/services.html
+++ b/services.html
@@ -114,9 +114,9 @@
                   </svg>
                   <i class="bx bx-search-alt"></i>
                 </div>
-                <h4><a href="">Networking</a></h4>
+                <h4><a href="">Cloud Hosting and Deployment</a></h4>
                 <p>
-                  Networking skills involve configuring and optimizing computer networks to enable seamless data exchange and communication among devices, systems, and users.
+                  Cloud hosting and deployment services offer scalable and flexible infrastructure solutions, allowing developers to host and manage their applications in the cloud. It's provide a range of tools and resources to ensure reliable performance, security, and easy scalability for applications of any size.
                 </p>
               </div>
             </div>
@@ -143,9 +143,10 @@
                   </svg>
                   <i class="bx bx-filter-alt"></i>
                 </div>
-                <h4><a href="">Cloud Computing</a></h4>
+                <h4><a href="">Server Support</a></h4>
                 <p>
-                  My cloud computing skills are centered around effectively harnessing cloud infrastructure and services, enabling organizations to leverage the full potential of cloud technology to meet their unique business needs, enhance scalability, and streamline operations.
+                  Server support services provide essential assistance in managing and maintaining server infrastructure. This includes troubleshooting issues, performing regular updates, ensuring security, and optimizing performance. Reliable server support ensures that applications run smoothly, with minimal downtime and quick resolution of any technical problems, allowing businesses to focus on their core activities without worrying about server management.
+
                 </p>
               </div>
             </div>
@@ -231,9 +232,9 @@
                   </svg>
                   <i class="bx bx-door-open"></i>
                 </div>
-                <h4><a href="">RedHat</a></h4>
+                <h4><a href="">Application Deployment</a></h4>
                 <p>
-                  My RedHat skills demonstrate proficiency in configuring, securing, and optimizing RedHat Linux environments. With a focus on maintaining robust system stability, I ensure mission-critical applications run seamlessly and securely, reflecting my commitment to delivering high-performance Linux solutions.
+                 Application deployment is the process of releasing and configuring an application to be accessible to users. This involves transferring the application from a development environment to a production environment, setting up necessary infrastructure, configuring settings, and ensuring that the application runs smoothly.
                 </p>
               </div>
             </div>
@@ -260,9 +261,9 @@
                   </svg>
                   <i class="bx bx-bar-chart-alt-2"></i>
                 </div>
-                <h4><a href="">AWS microservice tools</a></h4>
+                <h4><a href="">Nginx</a></h4>
                 <p>
-                  Leveraging my RedHat skills, I specialize in orchestrating and maintaining RedHat Linux environments, while my knowledge of AWS microservice tools complements this expertise by allowing me to design and deploy scalable, cloud-native applications on a foundation of robust and secure RedHat-based infrastructure.
+                Nginx is a high-performance web server and reverse proxy server used to handle and manage web traffic efficiently. It is known for its speed, reliability, and scalability, making it a popular choice for serving static content, managing API requests, and acting as a load balancer to distribute traffic across multiple servers. 
                 </p>
               </div>
             </div>
