--- a/about.html
+++ b/about.html
@@ -90,24 +90,15 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Arun Joseph</h3>
             <p class="fst-italic">
-              AWS Certified Cloud Practitioner |AWS | LINUX| DNS
-              | SSH | Networking  | MYSQL | CPANEL | Cpanel And WHM Certified |
+              AWS Cloud Engineer, Server Admin
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 11 April 2002</li>
+                 <!-- <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 11 April 2002</li>
                   <!--<li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> www.example.com</li>-->
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +91 9207957106 </li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Cochin, Kerala</li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 21</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> BCA</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong><a href=https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=arunjoseph364@gmail.com> arunjoseph364@gmail.com</a></li>
-                  <!--<li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>-->
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Malappuram, Kerala</li>
                 </ul>
               </div>
             </div>
@@ -137,28 +128,28 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">MySQL <i class="val">90%</i></span>
+              <span class="skill">Databases(Mongodb, Postgresql, Mysql, Mariadb<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Linux <i class="val">80%</i></span>
+              <span class="skill">Linux <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Cpanel <i class="val">85%</i></span>
+              <span class="skill">Cpanel <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Amazon Web Services <i class="val">80%</i></span>
+              <span class="skill">Amazon Web Services <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -179,33 +170,17 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div>
 
             <div class="progress">
-              <span class="skill">RedHat  <i class="val">90%</i></span>
+              <span class="skill">Devops Fundamentals<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+           </div>
 
-            <div class="progress">
-              <span class="skill">DNS <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Disk Partition <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">HTML and CSS<i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
