--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>Education &amp; Experience</h2>
-          <p><h4>Click <a href='https://drive.google.com/file/d/1RFvrsioH5Dn9rGoGhzpIlx31x5tdMAmY/view?usp=drive_link'><u>here</u></a> to view my Resume</h4></p>
+         <!-- <p><h4>Click <a href='https://drive.google.com/file/d/1RFvrsioH5Dn9rGoGhzpIlx31x5tdMAmY/view?usp=drive_link'><u>here</u></a> to view my Resume</h4></p>
         </div>
 
         <div class="row">
@@ -153,10 +153,9 @@
               <p><em>IotIot.in, pune, India </em></p>-->
               <p>
               <ul>
-                <li> AWS Certified Cloud Practitioner</li>
+                <li> AWS Certified</li>
                 <li>Cpanel</li>
-                <li>WHM</li>
-                <li>RedHat Course Compeletion</li>
+                <li>Redhat Course Completion</li>
                 
                 <!--<li>View the project <a href='https://gitlab.com/iotiotdotin/projectinternship-
                   ai/products/number-plate-detection'> <u>here</u> </a></li>-->
